[package]
name = "menta"
version = "0.0.0"
edition = "2024"

[dependencies]
softbuffer = "0.4.8"
winit = "0.30.12"
x11-dl = "2.21.0"
reqwest = { version = "0.12", features = ["blocking"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 1

[lints.clippy]
needless_range_loop = "allow"
