[package]
name = "menta"
version = "0.0.0"
edition = "2024"

[dependencies]
softbuffer = "0.4.8"
winit = "0.30.12"
x11-dl = "2.21.0"
reqwest = { version = "0.13.2", features = ["blocking"] }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
time = { version = "0.3.47", features = ["local-offset"] }
embedded-graphics = "0.8.1"
notify = "8.2.0"

[profile.release]
opt-level = 1

[lints.clippy]
needless_range_loop = "allow"
